--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -1,3 +1,5 @@
+ARG PORT
+
 # Node image to use
 FROM node:24
 
@@ -5,14 +7,6 @@ WORKDIR /app
 
 # Copy all files
 COPY stats-ui/ .
-
-# Set build arguments
-ARG REACT_APP_API_URL
-ARG REACT_APP_ENV
-
-# Set environment variables
-ENV REACT_APP_API_URL=$REACT_APP_API_URL
-ENV REACT_APP_ENV=$REACT_APP_ENV
 
 # Install dependencies
 RUN npm install
@@ -27,7 +21,7 @@ RUN sed -i 's|%REACT_APP_ENV%|'${REACT_APP_ENV}'|g' build/index.html
 RUN npm install -g serve
 
 # Expose port
-EXPOSE 9000
+EXPOSE ${PORT}
 
 # Start the application
-CMD ["serve", "-s", "build", "-l", "9000"]
+CMD ["npm", "run", "start"]
