--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -24,4 +24,4 @@ RUN npm install -g serve
 EXPOSE ${PORT}
 
 # Start the application
-CMD ["npm", "run", "start"]
+ENTRYPOINT ["npm", "run", "start"]
