--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -17,8 +17,11 @@ RUN npm run build
 # Use environment substitution in the built index.html
 RUN sed -i 's|%REACT_APP_ENV%|'${REACT_APP_ENV}'|g' build/index.html
 
+# Install serve
+RUN npm install -g serve
+
 # Expose port
 EXPOSE ${PORT}
 
 # Start the application
-ENTRYPOINT ["npm", "run", "start"]
+ENTRYPOINT ["serve", "-s", "build"]
