[ARXIVCE-3850] Update/add CICD for stats (#6)
* replace build with multistage, update Makefile

* update build file

* add entrypoint

* wip cloudbuild

* update syntax of substitutions

* missed one

* remove ref to latest for first build

* update target name, add ref to db secret

* inject secret at run stage

* format yaml

* move flag

* reorder args

* manual change to args

* use buildkit

* no buildkit

* update README

* refactor config and test db setup (#5)

* update README

* add ENV

* reorder stages

* update name of target for clarity

* add service name

* make idempotent with gcloud run deploy, update entrypoint for tests

* use image name as service name

* change variable name

* factor out service definition

* remove substitutions from service definition

* parameterize service yaml

* shorten

* move into cicd, update README

* default to latest secret

* add back version

* add workflow and service def for ui

* inject port into ui service

* update type

* update readme

* update port because of namespace clash

* format

* up ram for ui

* update units

* up ram again

* use default port for ui

--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -24,4 +24,4 @@ RUN npm install -g serve
 EXPOSE ${PORT}
 
 # Start the application
-CMD ["npm", "run", "start"]
+ENTRYPOINT ["serve", "-s", "build"]
