first working version with templates and assets

--- a/stats-api/stats_api/templates/main.html
+++ b/stats-api/stats_api/templates/main.html
@@ -1,4 +1,4 @@
-{%- extends "base.html" -%}
+{%- extends "stats_base.html" -%}
 {% set pagename = 'Usage Statistics' %}
 {% block title %}arXiv Usage Statistics{% endblock %}
 
