--- a/stats-api/stats_api/templates/stats_base.html
+++ b/stats-api/stats_api/templates/stats_base.html
@@ -1,4 +1,4 @@
-{%- extends "base.html" -%}
+{%- extends "arxiv_base.html" -%}
 {# Do not show login status on stats pages for now, per classic #}
 
 {% block head %}
@@ -6,7 +6,7 @@
   <script src="{{ url_for('static', filename='js/d3/3.5.17/d3.min.js') }}" type="text/javascript"></script>
 {% endblock head %}
 
-{% block header_h1 %}<h1 class="header-breadcrumbs"><a href="{{ url_for('.home') }}"><img src="{{ url_for('static', filename='images/arxiv-logo-one-color-white.svg') }}" alt="arxiv logo" style="height:40px;"/></a> <span>&gt;</span> stats  <span>&gt;</span> server usage</h1>{% endblock %}
+{% block header_h1 %}<h1 class="header-breadcrumbs"><a href="https://arxiv.org"><img src="{{ url_for('static', filename='images/arxiv-logo-one-color-white.svg') }}" alt="arxiv logo" style="height:40px;"/></a> <span>&gt;</span> stats  <span>&gt;</span> server usage</h1>{% endblock %}
 
 {% block content_stats %}
 <div class="columns is-mobile stats-header">
@@ -17,11 +17,11 @@
     <a href="" class="mobile-button is-hidden-desktop" href="/stats/main">Stats home</a>
     <div class="tabs is-boxed is-hidden-touch">
       <ul>
-        <li class="{% if request.path == '/stats/main' %}is-active{% endif %}"><a href="/stats/main">Stats home</a></li>
+        <li class="{% if request.path == '/stats/main' %}is-active{% endif %}"><a href="/stats/main/">Stats home</a></li>
         <li class="{% if request.path == '/stats/today' %}is-active{% endif %}"><a href="/stats/today">Today</a></li>
         <li class="{% if request.path == '/stats/monthly_submissions' %}is-active{% endif %}"><a href="/stats/monthly_submissions">Submissions</a></li>
         <li class="{% if request.path == '/stats/monthly_downloads' %}is-active{% endif %}"><a href="/stats/monthly_downloads">Downloads</a></li>
-        <li><a href="{{ url_for('help') }}/stats">Other stats</a></li>
+        <li><a href="{{ config.URLS.help }}/stats">Other stats</a></li>
       </ul>
     </div>
   </div>
