--- a/stats-api/stats_api/templates/monthly_downloads.html
+++ b/stats-api/stats_api/templates/monthly_downloads.html
@@ -11,7 +11,7 @@
   </div>
   <div id="chart_content">
     <div class="chart_text">
-      <a class="button is-pulled-right" title="download monthly download CSV data" href="{{ url_for('stats_api.stats', command='get_monthly_downloads') }}">Download CSV</a>
+      <a class="button is-pulled-right" title="download monthly download CSV data" href="{{ url_for('stats_api.get_monthly_downloads') }}">Download CSV</a>
       <p>Total number of downloads {% if latest_month %}through {{ latest_month.strftime('%B %Y') }}{% endif %} = {{ "{:,}".format(total_downloads) }}</p>
     </div>
     {% include "monthly_downloads_js.html" %}
