--- a/stats-api/stats_api/templates/today.html
+++ b/stats-api/stats_api/templates/today.html
@@ -1,4 +1,4 @@
-{%- extends "arxiv_base.html" -%}
+{%- extends "stats_base.html" -%}
 {% set pagename = 'Hourly Usage Stats' %}
 {% block title %}hourly usage{% endblock %}
 
