--- a/stats-api/stats_api/templates/monthly_downloads_js.html
+++ b/stats-api/stats_api/templates/monthly_downloads_js.html
@@ -1,3 +1,5 @@
+<script src="{{ url_for('static', filename='js/d3/3.5.17/d3.min.js') }}" type="text/javascript"></script>
+
 <style>
   #chart_content svg {
     font: 10px sans-serif;
@@ -130,7 +132,7 @@
     .attr("transform", "translate(" + margin2.left + "," + margin2.top + ")")
     .attr("class", "small-chart");
 
-  d3.csv("{{ url_for('stats_api.stats', command='get_monthly_downloads') }}", function(error, data) {
+  d3.csv("{{ url_for('stats_api.get_monthly_downloads') }}", function(error, data) {
 
     data.forEach(function(d) {
       d.month = parseDate(d.month);
