--- a/stats-api/stats_api/templates/monthly_submissions_js.html
+++ b/stats-api/stats_api/templates/monthly_submissions_js.html
@@ -1,3 +1,5 @@
+<script src="{{ url_for('static', filename='js/d3/3.5.17/d3.min.js') }}" type="text/javascript"></script>
+
 <style type="text/css">
   svg {
     font: 10px sans-serif;
@@ -134,7 +136,7 @@
       return y(d.submissions);
     });
 
-  d3.csv("{{ url_for('stats_api.stats', command='get_monthly_submissions') }}", function(error, data) {
+  d3.csv("{{ url_for('stats_api.get_monthly_submissions') }}", function(error, data) {
     data.forEach(function(d) {
       d.month = parseDate(d.month);
       d.submissions = +d.submissions;
