--- a/stats-api/stats_api/templates/stats_base.html
+++ b/stats-api/stats_api/templates/stats_base.html
@@ -3,7 +3,6 @@
 
 {% block head %}
   {{ super() -}}
-  <script src="{{ url_for('static', filename='js/d3/3.5.17/d3.min.js') }}" type="text/javascript"></script>
 {% endblock head %}
 
 {% block header_h1 %}<h1 class="header-breadcrumbs"><a href="https://arxiv.org"><img src="{{ url_for('static', filename='images/arxiv-logo-one-color-white.svg') }}" alt="arxiv logo" style="height:40px;"/></a> <span>&gt;</span> stats  <span>&gt;</span> server usage</h1>{% endblock %}
@@ -17,7 +16,7 @@
     <a href="" class="mobile-button is-hidden-desktop" href="/stats/main">Stats home</a>
     <div class="tabs is-boxed is-hidden-touch">
       <ul>
-        <li class="{% if request.path == '/stats/main' %}is-active{% endif %}"><a href="/stats/main/">Stats home</a></li>
+        <li class="{% if request.path == '/stats/main' %}is-active{% endif %}"><a href="/stats/main">Stats home</a></li>
         <li class="{% if request.path == '/stats/today' %}is-active{% endif %}"><a href="/stats/today">Today</a></li>
         <li class="{% if request.path == '/stats/monthly_submissions' %}is-active{% endif %}"><a href="/stats/monthly_submissions">Submissions</a></li>
         <li class="{% if request.path == '/stats/monthly_downloads' %}is-active{% endif %}"><a href="/stats/monthly_downloads">Downloads</a></li>
