--- a/stats-api/stats_api/templates/stats_base.html
+++ b/stats-api/stats_api/templates/stats_base.html
@@ -5,7 +5,7 @@
   {{ super() -}}
 {% endblock head %}
 
-{% block header_h1 %}<h1 class="header-breadcrumbs"><a href="https://arxiv.org"><img src="{{ url_for('static', filename='images/arxiv-logo-one-color-white.svg') }}" alt="arxiv logo" style="height:40px;"/></a> <span>&gt;</span> stats  <span>&gt;</span> server usage</h1>{% endblock %}
+{% block header_h1 %}<h1 class="header-breadcrumbs"><a href="https://arxiv.org"><img src="{{ url_for('static', filename='images/arxiv-logo-one-color-white.svg') }}" alt="arxiv logo" style="height:40px;"/></a> <span>&gt;</span> stats</h1>{% endblock %}
 
 {% block content_stats %}
 <div class="columns is-mobile stats-header">
